# games

./: CMakeLists.txt  WindowManager.hpp  basicStructs.hpp  event.hpp  main.cpp  object.cpp  object.hpp
sfmlImp/: SFMLObject.cpp  SFMLObject.hpp  SFMLWindowManager.cpp  SFMLWindowManager.hpp
